--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</div>
 		<hr>
 	</div>
-	<h2 class="h2 hproj text-secondary">My Projects</h2>
+	<h2 class="h2 hproj text-primary">My Projects</h2>
 	<div id="projects" class="container row m-auto mt-5" style="width: 40rem;">
 		<div class="card col-lg-6" style="width: 18rem;">
 			<img src="..." alt="...">
