--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<div class="card-body">
 				<h5 class="card-title text-secondary">OW</h5>
 				<p class="card-text bold_text text-danger">A one-page website based on one of Blizzard's Overwatch latest events.</p>
-				<a href="#" class="btn btn-primary">Take a look.</a>
+				<a href="https://paywga.github.io/OWProject/" target="blank" class="btn btn-primary">Take a look.</a>
 			</div>
 		</div>
 		<div class="card col-lg-6" style="width: 18rem;">
